--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build
+      - name: Add .nojekyll file
+        run: touch build/.nojekyll
       - uses: actions/upload-pages-artifact@v3
         with:
           path: 'build'
